--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.3",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.8",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-easy-edit": "^1.17.2",
     "react-icons": "^5.3.0",
