--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.11.8",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-edit": "^1.17.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "axios": "^1.7.7",
-    "js-cookie": "^3.0.5",
-    "react-easy-edit": "^1.17.2",
-    "react-show-more-text": "^1.7.1",
-    "framer-motion": "^11.11.8"
+    "react-show-more-text": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
