--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "react-show-more-text": "^1.7.1"
+    "react-show-more-text": "^1.7.1",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
