--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "js-cookie": "^3.0.5",
+    "material-ui-confirm": "^3.0.16",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
