--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-easy-edit": "^1.17.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-show-more-text": "^1.7.1",
     "recharts": "^2.13.0"
